Remove Base64Encoder and Base64.Decoder-Class